--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -71,7 +71,7 @@
 
     <div class="layui-footer">
         <!-- 底部固定区域 -->
-        © layui.com - 底部固定区域
+        © www.123.com
     </div>
 </div>
 <script src="../layui/layui.js"></script>
